--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '2.2'
 
 services:
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
     container_name: elasticsearch
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms4g -Xmx4g"
+      - "ES_JAVA_OPTS=-Xms8g -Xmx8g"
     ulimits:
       memlock:
         soft: -1
@@ -16,18 +17,23 @@ services:
       - elkdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+
   kibana:
     image: docker.elastic.co/kibana/kibana:6.4.2
     container_name: kibana
-    volumes:
-      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
+    environment:
+      - "ELASTICSEARCH_URL=http://elasticsearch:9200"
     ports:
       - 5601:5601
+
   logstash:
     image: docker.elastic.co/logstash/logstash:6.4.2
     container_name: logstash
+    environment:
+      - xpack.monitoring.elasticsearch.url=http://elasticsearch:9200
     volumes:
-      - ./pipelines.yml:/usr/share/logstash/config/pipelines.yml
+      - ./logs/http.log:/http.log
+      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
 
 volumes:
   elkdata:
