--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms8g -Xmx8g"
+      - ES_JAVA_OPTS=-Xms8g -Xmx8g
+      - xpack.monitoring.collection.enabled=true
     ulimits:
       memlock:
         soft: -1
@@ -22,7 +23,7 @@ services:
     image: docker.elastic.co/kibana/kibana:6.4.2
     container_name: kibana
     environment:
-      - "ELASTICSEARCH_URL=http://elasticsearch:9200"
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
     ports:
       - 5601:5601
 
@@ -31,6 +32,7 @@ services:
     container_name: logstash
     environment:
       - xpack.monitoring.elasticsearch.url=http://elasticsearch:9200
+      - xpack.monitoring.enabled=true
     volumes:
       - ./logs/http.log:/http.log
       - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
