Added debug settings to logstash conf

--- a/logstash.conf
+++ b/logstash.conf
@@ -13,9 +13,13 @@ filter {
 }
 
 output {
-  elasticsearch {
-    hosts => ["elasticsearch:9200"]
-    index => "csv-data"
+
+  if "_grokparsefailure" in [tags] {
+    stdout { codec => rubydebug }
+  } else {
+    elasticsearch {
+      hosts => ["elasticsearch:9200"]
+      index => "csv-data"
+    }
   }
-  stdout {}
 }
