logstash.conf. CSV.

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,19 +1,24 @@
 input {
-    file {
-        path => "/data.csv"
-        start_position => "beginning"
-        sincedb_path => "/dev/null"
-    }
+  file {
+    path => "/data.csv"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
+  }
 }
 
 filter {
   csv {
     separator => ","
+    columns => [
+      "yyyymmdd (N)","hhmmssrndrnd (N)","email (S)","environment (S)","http_method (S)","ip_address (S)","location (S)","reason (S)","time_utc (S)","unix_ms (S)","user_agent (S)"
+    ]
+  }
+  date {
+    match => ["unix_ms (S)", "UNIX_MS"]
   }
 }
 
 output {
-
   if "_grokparsefailure" in [tags] {
     stdout { codec => rubydebug }
   } else {
