geoip (geo_point type) working

--- a/logstash.conf
+++ b/logstash.conf
@@ -16,6 +16,10 @@ filter {
   date {
     match => ["unix_ms (S)", "UNIX_MS"]
   }
+  geoip {
+    source => "ip_address (S)"
+    target => "geoip"
+  }
 }
 
 output {
@@ -24,7 +28,6 @@ output {
   } else {
     elasticsearch {
       hosts => ["elasticsearch:9200"]
-      index => "csv-data"
     }
   }
 }
