--- a/logstash.conf
+++ b/logstash.conf
@@ -1,24 +1,47 @@
+# Send logs using nc localhost 5000 < auth.log
+
 input {
-  file {
-    path => "/data.csv"
-    start_position => "beginning"
-    sincedb_path => "/dev/null"
+  tcp {
+    	port => 5000
   }
 }
 
 filter {
-  csv {
-    separator => ","
-    columns => [
-      "yyyymmdd (N)","hhmmssrndrnd (N)","email (S)","environment (S)","http_method (S)","ip_address (S)","location (S)","reason (S)","time_utc (S)","unix_ms (S)","user_agent (S)"
+  grok {
+    add_tag => [ "valid" ]
+
+    # Example log entries for both failed and successful logins:
+    #
+    # Aug  9 09:13:25 vmubu01 sshd[5761]: Failed password for root from 218.87.111.109 port 45712 ssh2
+    # Aug  9 09:13:31 vmubu01 sshd[5761]: message repeated 2 times: [ Failed password for root from 218.87.111.109 port 45712 ssh2]
+    # Aug 14 17:25:47 vmubu01 sshd[22101]: Failed password for invalid user test from 115.68.23.130 port 43092 ssh2
+    # Aug 16 13:47:44 vmubu01 sshd[730]: Accepted publickey for username from 192.168.1.225 port 38783 ssh2: RSA 01:02:03:04:05:06:07:08:09:0a:0b:0c:0d:0e:0f:10
+    # Aug 16 13:47:57 vmubu01 sshd[816]: Accepted password for username from 192.168.1.225 port 38786 ssh2
+    match => [
+      "message", "%{SYSLOGTIMESTAMP:syslog_date} %{SYSLOGHOST:syslog_host} %{DATA:syslog_program}(?:\[%{POSINT}\])?: %{WORD:login} password for %{USERNAME:username} from %{IP:ip} %{GREEDYDATA}",
+      "message", "%{SYSLOGTIMESTAMP:syslog_date} %{SYSLOGHOST:syslog_host} %{DATA:syslog_program}(?:\[%{POSINT}\])?: message repeated 2 times: \[ %{WORD:login} password for %{USERNAME:username} from %{IP:ip} %{GREEDYDATA}",
+      "message", "%{SYSLOGTIMESTAMP:syslog_date} %{SYSLOGHOST:syslog_host} %{DATA:syslog_program}(?:\[%{POSINT}\])?: %{WORD:login} password for invalid user %{USERNAME:username} from %{IP:ip} %{GREEDYDATA}",
+      "message", "%{SYSLOGTIMESTAMP:syslog_date} %{SYSLOGHOST:syslog_host} %{DATA:syslog_program}(?:\[%{POSINT}\])?: %{WORD:login} %{WORD:auth_method} for %{USERNAME:username} from %{IP:ip} %{GREEDYDATA}"
     ]
   }
-  date {
-    match => ["unix_ms (S)", "UNIX_MS"]
+
+  if "valid" not in [tags] {
+    drop { }
   }
+
+  mutate {
+    remove_tag => [ "valid" ]
+    lowercase => [ "login" ]
+  }
+
+
+  date {
+    match => [ "syslog_date", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601" ]
+    timezone => "Europe/Helsinki"
+  }
+
   geoip {
-    source => "ip_address (S)"
-    target => "geoip"
+    source => "ip"
   }
 }
 
